Proyecto Gramola: Backend optimizado y Frontend con cerrojo de transición